--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 CLOUD_NAME=dzpsnww8x
 CLOUD_API_KEY=625836538832461
-CLOUD_API_SECRET=*********************************
+CLOUD_API_SECRET=iGoN8uu9UrxfKUldWFNUaR_LEy0
